data/usersCode/dfdfa/question1/error.txt
/home/gauravghati/clash2/data/usersCode/dfdfa/question1/code1-0.cpp:1:1: error: expected unqualified-id before string constant
 "PASS"
 ^~~~~~
